<resources>
    <string name="app_name">App Saenz Pena</string>

    <!-- Main Activity -->
    <string name="title_screen">Bienvenido</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_pass">Password</string>
    <string name="login">Login</string>

    <!-- Login Activity -->
    <string name="pass_error">Nombre de usuario y/o contraseña incorrecto.</string>
    <string name="db_error">Error en la apertura de la base de datos de usuarios.</string>

    <!-- Wellcome Activity -->
    <string name="wellcome_screen">Bienvenido</string>
    <string name="candidatos">Candidatos</string>
    <string name="escrutinio">Escrutinio</string>
    <string name="padron">Padrón</string>
    <string name="votar">Votar</string>

    <!-- New/Del Candidato -->
    <string name="candidato">Candidato</string>
    <string name="new_candidato">Agregar candidato</string>
    <string name="partido">Partido</string>
    <string name="nro_lista">Lista</string>
    <string name="delete_candidato">Esta seguro que desea eliminar la lista?</string>
    <string name="agregar">Agregar</string>
    <string name="delete">eliminar</string>
    <string name="cancel">Cancelar</string>

    <!-- New Usuario -->
    <string name="codigo">Codigo</string>
    <string name="pass_not_equal">Las contraceñas no concuerdan</string>
    <string name="hint_pass2">Repeat Password</string>
    <string name="not_avaliable">Aún no disponible</string>

    <!-- Padron -->
    <string name="Padron">Padron Electoral</string>


</resources>
