<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.electiva.envido32.appsaenzpena.LoginActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/title_screen"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextPass"
        android:layout_marginTop="105dp"
        android:ems="10"
        android:hint="@string/hint_user"
        android:inputType="textEmailAddress"
        android:text="votante"
        app:layout_heightPercent="10%"
        app:layout_widthPercent="50%" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_pass"
        android:text=""
        android:inputType="textPassword"
        app:layout_widthPercent="50%"
        app:layout_heightPercent="10%"
        android:layout_below="@+id/editTextMail"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_widthPercent="50%"
        app:layout_heightPercent="10%"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/editTextPass" />


</android.support.percent.PercentRelativeLayout>
